[project]
name = "pylox"
version = "0.1.0"
description = "Lox"
readme = "README.md"
authors = [
    { name = "Emily Ong", email = "emilyohq11@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pylox = "pylox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
